[package]
name = "q_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
chumsky = "0.9.2"
clap = { version = "4.2.7", features = [ "derive" ] }
lazy_static = "1.4.0"
nalgebra = "0.32.2"
num-traits = "0.2.15"
