[package]
name = "q_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.2.7", features = [ "derive" ] }
codespan-reporting = "0.11.1"
lazy_static = "1.4.0"
nalgebra = "0.32.2"
num-traits = "0.2.15"
rand = "0.8.5"
lalrpop-util = { version = "0.20.0", features = [ "lexer" ] }

[build_dependencies]
lalrpop = { version = "0.20.0", features = [ "lexer" ] }
