[package]
name = "q_asm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.35", features = ["derive"] }
codespan-reporting = "0.12.0"
lazy_static = "1.4.0"
nalgebra = "0.33.2"
num-traits = "0.2.15"
rand = "0.9.0"
lalrpop-util = { version = "0.22.1", features = ["lexer"] }
snailquote = "0.3.1"

[build-dependencies]
lalrpop = { version = "0.22.1", features = ["lexer"] }
